--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "my_new_app",
-    "short_name": "my_new_app",
+    "name": "Akhdem Li",
+    "short_name": "Akhdem Li ",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
