--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
 
   # Maps & GPS
   google_maps_flutter: ^2.5.0
-  geolocator: ^14.0.2
+  geolocator: ^11.0.1
   geocoding: ^2.2.0
 
   # HTTP
@@ -45,16 +45,17 @@ dependencies:
   permission_handler: ^11.0.0
 
   # -----------------------
-  # 🔥 Firebase (versions compatibles)
+  # 🔥 Firebase
   # -----------------------
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.15.8
-  firebase_auth: ^4.15.2
+  firebase_core: ^2.24.1
+  cloud_firestore: ^4.9.5
+  firebase_auth: ^4.17.3
   firebase_storage: ^11.5.7
-  firebase_messaging: ^14.7.9
+  firebase_messaging: ^14.7.3
 
   # Geospatial Firestore queries
-  geoflutterfire_plus: ^0.0.21   
+  geoflutterfire_plus: ^0.0.21
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
